--- a/index.html
+++ b/index.html
@@ -848,20 +848,20 @@ Reston, VA 20190</li>
 						</div>
 						<div class="col-sm-6">
 							<div class="footer-content">
-								<form role="form" id="footer-form">
+								<form role="form" id="footer-form" action="http://formspree.io/ryanjones83@gmail.com" method="POST">
 									<div class="form-group has-feedback">
 										<label class="sr-only" for="name2">Name</label>
-										<input type="text" class="form-control" id="name2" placeholder="Name" name="name2" required>
+										<input type="text" class="form-control" id="name2" placeholder="Name" name="name2" required value="">
 										<i class="fa fa-user form-control-feedback"></i>
 									</div>
 									<div class="form-group has-feedback">
 										<label class="sr-only" for="email2">Email address</label>
-										<input type="email" class="form-control" id="email2" placeholder="Enter email" name="email2" required>
+										<input type="_replyto" class="form-control" id="email2" placeholder="Enter email" name="email2" required value="">
 										<i class="fa fa-envelope form-control-feedback"></i>
 									</div>
 									<div class="form-group has-feedback">
 										<label class="sr-only" for="message2">Message</label>
-										<textarea class="form-control" rows="8" id="message2" placeholder="Message" name="message2" required></textarea>
+										<textarea class="form-control" rows="8" id="message2" placeholder="Message" name="message2" required value=""></textarea>
 										<i class="fa fa-pencil form-control-feedback"></i>
 									</div>
 									<input type="submit" value="Send" class="btn btn-default send">
