--- a/index.html
+++ b/index.html
@@ -32,6 +32,10 @@
 
 		<!-- Custom css -->
 		<link href="css/custom.css" rel="stylesheet">
+
+		<!-- Hover Effects css -->
+		<link href="css/hover.css" rel="stylesheet">
+
 	</head>
 
 	<body class="no-trans">
@@ -695,8 +699,8 @@
 				<div class="row">
 					<div class="col-md-4">
 						<div class="media testimonial">
-							<div class="media-right">
-								<i class="fa fa-info-circle fa-5x"></i>
+							<a href="#" class="hvr-float"><div class="media-right">
+								<i class="fa fa-info-circle fa-5x "></i>
 							</div>
 							<div class="media-body">
 								<h3 class="media-heading">Theodore J. Doremus</h3>
@@ -705,12 +709,13 @@
 									<footer>Managing Partner</footer>
 								</blockquote>
 							</div>
+							</a>
 						</div>
 					</div>
 					<div class="col-md-4">
 						<div class="media testimonial">
-							<div class="media-right">
-								<i class="fa fa-info-circle fa-5x"></i>
+							<a href="#" class="hvr-float"><div class="media-right">
+								<i class="fa fa-info-circle fa-5x "></i>
 							</div>
 							<div class="media-body">
 								<h3 class="media-heading">Greg Mattingly CFP®</h3>
@@ -719,12 +724,13 @@
 									<footer>Partner &amp; CFO</footer>
 								</blockquote>
 							</div>
+							</a>
 						</div>
 					</div>
 					<div class="col-md-4">
 						<div class="media testimonial">
-							<div class="media-right">
-								<i class="fa fa-info-circle fa-5x"></i>
+							<a href="#" class="hvr-float"><div class="media-right">
+								<i class="fa fa-info-circle fa-5x "></i>
 							</div>
 							<div class="media-body">
 								<h3 class="media-heading">Allison Beinecke</h3>
@@ -733,6 +739,7 @@
 									<footer>Chief Operating Officer</footer>
 								</blockquote>
 							</div>
+							</a>
 						</div>
 					</div>
 				</div>
@@ -742,8 +749,8 @@
 				<div class="row">
 					<div class="col-md-4">
 						<div class="media testimonial">
-							<div class="media-right">
-								<i class="fa fa-info-circle fa-5x"></i>
+							<a href="#" class="hvr-float"><div class="media-right">
+								<i class="fa fa-info-circle fa-5x "></i>
 							</div>
 							<div class="media-body">
 								<h3 class="media-heading">Rena A. Jabbour</h3>
@@ -752,12 +759,13 @@
 									<footer>VP of Institutional Sales &amp; Sr. Wealth Advisor</footer>
 								</blockquote>
 							</div>
+							</a>
 						</div>
 					</div>
 					<div class="col-md-4">
 						<div class="media testimonial">
-							<div class="media-right">
-								<i class="fa fa-info-circle fa-5x"></i>
+							<a href="#" class="hvr-float"><div class="media-right">
+								<i class="fa fa-info-circle fa-5x "></i>
 							</div>
 							<div class="media-body">
 								<h3 class="media-heading">Aaron Berman</h3>
@@ -766,12 +774,13 @@
 									<footer>VP of Institutional Sales</footer>
 								</blockquote>
 							</div>
+							</a>
 						</div>
 					</div>
 					<div class="col-md-4">
 						<div class="media testimonial">
-							<div class="media-right">
-								<i class="fa fa-info-circle fa-5x"></i>
+							<a href="#" class="hvr-float"><div class="media-right">
+								<i class="fa fa-info-circle fa-5x "></i>
 							</div>
 							<div class="media-body">
 								<h3 class="media-heading">Pamela Escobar</h3>
@@ -780,6 +789,7 @@
 									<footer>Client Associate</footer>
 								</blockquote>
 							</div>
+							</a>
 						</div>
 					</div>
 				</div>
@@ -789,8 +799,8 @@
 								<div class="row">
 									<div class="col-md-4">
 										<div class="media testimonial">
-											<div class="media-right">
-												<i class="fa fa-info-circle fa-5x"></i>
+											<a href="#" class="hvr-float"><div class="media-right">
+												<i class="fa fa-info-circle fa-5x "></i>
 											</div>
 											<div class="media-body">
 												<h3 class="media-heading">Laura White</h3>
@@ -799,6 +809,7 @@
 													<footer>Internal Wholesaler</footer>
 												</blockquote>
 											</div>
+											</a>
 										</div>
 									</div>
 								</div>
@@ -873,8 +884,6 @@ Reston, VA 20190</li>
 			</div>
 			<!-- .footer end -->
 
-			<div class="default-bg space">
-			</div>
 			<div class="default-bg space">
 			</div>
 			<div class="default-bg space">
