--- a/index.html
+++ b/index.html
@@ -102,6 +102,7 @@
 												<li><a href="#institutions">Institutions</a></li>
 												<li><a href="#services">Services</a></li>
 												<li><a href="#team">Team</a></li>
+												<li><a href="blog.html">Blog</a></li>
 												<li><a href="#contact">Contact</a></li>
 											</ul>
 										</div>
@@ -1137,7 +1138,7 @@ Reston, VA 20190</li>
 				<div class="container">
 					<div class="row">
 						<div class="col-md-6">
-							<p class="text-left"><a data-toggle="modal" data-target="#modal-disclaimer" href="#">Disclaimer</a>   |   <a data-toggle="modal" data-target="#modal-terms" href="#">Terms and Conditions</a></p>
+							<p class="text-left scrollspy smooth-scroll"><a href="#banner">PrestonWealthAdvisors.com</a>   |   <a data-toggle="modal" data-target="#modal-disclaimer" href="#">Disclaimer</a>   |   <a data-toggle="modal" data-target="#modal-terms" href="#">Terms and Conditions</a></p>
 						</div>
 
 						<!-- Disclaimer Modal -->
