Account Access Button

--- a/index.html
+++ b/index.html
@@ -1046,27 +1046,20 @@
 
 								</div>
 
+								<hr>
+
+								<div class="space"></div>
+								<p class="text-center lead">Click Here to get to the Account Access Page</p>
+								<p>
+								  <button type="button" class="btn btn-primary btn-lg center-block">Account Access</button>
+								</p>
+								<div class="space"></div>
 <!-- ===================== rows end ==================== -->
 
 			</div>
-
-			<!-- section start -->
-			<!-- ================ -->
-			<div class="translucent-bg">
-				<div class="container">
-
-				</div>
-			</div>
 			<!-- section end -->
 		</div>
-		<!-- section end -->
 
-		<!-- section start -->
-		<!-- ================ -->
-
-		<!-- section end -->
-
-		<!-- footer start -->
 		<!-- ================ -->
 		<footer id="footer">
 
