--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-
 <html lang="en">
 
 	<head>
@@ -160,7 +159,7 @@
 							<div class="col-md-6">
 								<p>At Preston Wealth Advisors, we provide you with an uncommon approach to growing
 								and securing of your wealth.  Because we believe in making trading decisions based on hard data, not emotion, we utilize an algorithm that monitors the market, identifies
-								growth sectors and pinpoints high performance ETF’s and mutual funds.<br><br>Our unique approach aids us in our efforts to protect your investment during downturns and seek to maximize returns as the market rises.  As an active money manager, our focus is on reviewing portfolio strategies daily and not adhering to the buy and hold methodology.</p>
+								growth sectors and pinpoints high performance ETFs and Mutual Funds.<br><br>Our unique approach aids us in our efforts to protect your investment during downturns and seek to maximize returns as the market rises.  As an active money manager, our focus is on reviewing portfolio strategies daily and not adhering to the buy and hold methodology.</p>
 
 							</div>
 						</div>
@@ -171,12 +170,12 @@
 								<p>We believe that if the markets are active, the portfolios should be managed according to these shifts as well.</p>
 								<ul>
 									<a href="#services" class="scrollspy smooth-scroll"><li>Check out some of our Services</li></a>
-									<a href="#team" class="scrollspy smooth-scroll"><li>Get to know our team</li></a>
-									<a href="#contact" class="scrollspy smooth-scroll"><li>Contact us today</li></a>
+									<a href="#team" class="scrollspy smooth-scroll"><li>Get to know our Team</li></a>
+									<a href="#contact" class="scrollspy smooth-scroll"><li>Contact Us today</li></a>
 								</ul>
 
 								<p>Our algorithm allows us to distinguish high performance equity and fixed-income sectors,
-								providing us the ability to effectively grow your wealth. When volatile conditions unveil warnings of risk, we can move your portfolio partially or entirely into cash in order to try and ensure the security and protection of your investment.<br><br>You want to focus on client service, developing relationships, and increasing your assets under management while someone else tends to the portfolios. Preston Wealth Advisors is the “someone else.” Partner with us, and achieve your goals.</p>
+								providing us the ability to effectively grow your wealth. When volatile conditions unveil warnings of risk, we can move your portfolio partially or entirely into cash in order to try and ensure the security and protection of your investment.</p>
 
 							</div>
 							<div class="col-md-6">
@@ -191,8 +190,7 @@
 										</div>
 										<div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
 											<div class="panel-body">
-												Preston Wealth Advisors probe until we understand your risk tolerance’s precise latitude. Then we invest in the highest performing asset mix at a risk threshold acceptable to you.
-												Because we manage our own portfolios, Preston Wealth Advisors has complete discretion in how and where we invest.
+												Preston Wealth Advisors probe until we understand your risk tolerance’s precise latitude. Then we invest in the highest performing asset mix at a risk threshold acceptable to you. Because we manage our own portfolios, Preston Wealth Advisors has complete discretion in how and where we invest.
 											</div>
 										</div>
 									</div>
@@ -206,8 +204,8 @@
 										</div>
 										<div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
 											<div class="panel-body">
-												First, we make trading decisions based on data, rather than emotion. Preston Wealth Advisors has developed a proprietary, patent-pending algorithm that constantly monitors the market, identifies growth sectors, and pinpoints specific performing ETF’s and Mutual Funds. The sector agnostic algorithm analyzes data daily and alerts us to buy or sell based on indicators we have selected and continuously tune. A Preston Wealth Advisor reviews the data before ever submitting a trade.<br><br>
-												Secondly, we take more aggressive positions when the market rises and sell when indicators signal it will fall. In the event neither fixed income nor equity investments offer enough return to justify the risk, our advisors can move 100% to cash. In 2008, our algorithm protected clients, limiting their losses in our most aggressive portfolios to just 5%, when the S&amp;P dropped 37%.
+												First, we make trading decisions based on data, rather than emotion by using sector agnostic algorithm that analyzes data daily and alerts us to buy or sell based on indicators we have selected and continuously tune. A Preston Wealth Advisor reviews the data before ever submitting a trade.<br><br>
+												Secondly, we take more aggressive positions when the market rises and sell when indicators signal it will fall. In the event neither fixed income nor equity investments offer enough return to justify the risk, the portfolios can move 100% to cash. In 2008, the algorithm would have limited the losses in our most aggressive portfolios to just 5%, when the S&amp;P dropped 37%.
 											</div>
 										</div>
 									</div>
@@ -221,11 +219,12 @@
 										</div>
 										<div id="collapseThree" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
 											<div class="panel-body">
-												The same algorithm protecting clients in volatile markets maximizes their investments when it roars. Many of our retired clients avail themselves of our growth funds because they trust our algorithm to protect their principal while multiplying their assets.<br><br>
-												Contact us now to get started growing your wealth and protecting your assets!
+												The same algorithm that works to protect clients in volatile markets also works to maximize their investments when markets soar.<br><br>
+												Contact us now to learn how.
 											</div>
 										</div>
 									</div>
+
 								</div>
 							</div>
 						</div>
@@ -235,14 +234,14 @@
 		</div>
 		<!-- section end -->
 
+		<!-- section end -->
+
 		<!-- section start -->
 		<!-- ================ -->
 		<div class="section translucent-bg bg-image-1 blue">
 			<div class="container object-non-visible" data-animation-effect="fadeIn">
 				<h1 id="institutions"  class="text-center title">Third Party Money Management</h1>
-				<p class="text-center inst-heading">Because a segment of our business is dedicated to Private Clients, we understand and work with you not just as a Third Party Money Manager but as an Advisor with first-hand knowledge on the topics that are important to you and your clients as well as the service needed to maintain these relationships.<br><br>We designed Preston Wealth Advisors around a central idea: Offer a money management style to our institutional clients that we wanted as advisors for our own clients. Preston Wealth Advisors offers a spectrum of proprietary investment portfolios on multiple custodial platforms, focusing on principal protection and client asset growth.  As a Third Party Money Manager, we provide the necessary investment resources to help you manage your client relationships and your book of business.  In offering a wide array of strategies, Preston Wealth Advisors is able to provide solutions for core portfolios in addition to strategy overlays that may complement your existing investment approach.<br><br>Our Portfolios, that use a mathematically based algorithm, provide the opportunity to monitor the market and are designed to navigate both up and down markets. Whether you designate a third party for the majority of your book of business or even for a segment of your in-house strategies, partnering with the seasoned team at Preston Wealth Advisors will provide you with the resources to offer options and solutions to your clients.</p>
-				<hr>
-				<p class="lead text-center">We believe we are the Third Party Money Manager that understands your business.</p>
+				<p class="text-center inst-heading">Because a segment of our business is dedicated to Private Clients, we understand and work with you not just as a Third Party Money Manager but as an Advisor with first-hand knowledge on the topics that are important to you and your clients as well as the service needed to maintain these relationships.<br><br>We designed Preston Wealth Advisors around a central idea: Offer a money management style to our institutional clients that we wanted as advisors for our own clients. Preston Wealth Advisors offers a spectrum of proprietary investment portfolios on multiple custodial platforms, focusing on principal protection and client asset growth.  As a Third Party Money Manager, we provide the necessary investment resources to help you manage your client relationships and your book of business.  In offering a wide array of strategies, Preston Wealth Advisors is able to provide solutions for core portfolios in addition to strategy overlays that may complement your existing investment approach.<br><br>Our Portfolios, that use a mathematically based algorithm, provide the opportunity to monitor the market and are designed to navigate both up and down markets. Whether you designate a third party for the majority of your book of business or even for a segment of your in-house strategies, partnering with the seasoned team at Preston Wealth Advisors will provide you with the resources to offer options and solutions to your clients.<br><br>We believe we are the Third Party Money Manager that understands your business.</p>
 				<hr>
 				<div class="row">
 					<div class="col-sm-6">
@@ -250,6 +249,7 @@
 							<div class="media-body">
 								<a href="#" data-toggle="modal" data-target="#tpmm-tp"><h4 class="media-heading text-right">PWA TACTICAL PORTFOLIOS</h4></a>
 								<p class="text-justify">PWA Tactical Portfolios are relative strength, momentum based strategies that monitor price movement and statistical growth opportunities among a range of investments selected from the portfolio’s investment universe.  Using a mathematical algorithm and an exclusive scoring methodology, a combination of investments are selected based off of the opportunity present in the market and the overall portfolio investment objective.  A wide spectrum of portfolios are offered to cater to varying risk tolerances and investment objectives.</p>
+
 							</div>
 							<div class="media-right">
 								<i class="fa fa-line-chart fa-4x"></i>
@@ -922,7 +922,7 @@
 							<div class="media-body">
 								<h3 class="media-heading">Rena A. Jabbour</h3>
 								<blockquote>
-									<p>As Preston Wealth Advisor’s VP of Institutional Sales, Rena introduces Preston Wealth Advisors tacticalasset allocation products and portfolios to both institutional &amp; retail clients.</p>
+									<p>As Preston Wealth Advisor’s VP of Institutional Sales, Rena introduces Preston Wealth Advisors tactical asset allocation products and portfolios to both institutional &amp; retail clients.</p>
 									<footer>VP of Institutional Sales &amp; Sr. Wealth Advisor</footer>
 								</blockquote>
 							</div>
@@ -972,7 +972,7 @@
 							<div class="media-body">
 								<h3 class="media-heading">Aaron Berman</h3>
 								<blockquote>
-									<p>As Preston Wealth Advisor’s SR. VP of Institutional Sales, Aaron works with RIA’sthroughout the country introducing our proprietary tactical strategies.</p>
+									<p>As Preston Wealth Advisor’s SR. VP of Institutional Sales, Aaron works with RIA’s throughout the country introducing our proprietary tactical strategies.</p>
 									<footer>SR. VP of Institutional Sales</footer>
 								</blockquote>
 							</div>
@@ -1152,8 +1152,7 @@
 							<div class="footer-content">
 								<p class="large">We would love to hear from you! Preston Wealth Advisors is happy to assist you with any questions or additional information you may have or need so please use the input fields provided to contact us.  These fields can also be used to request our ADV and/or Privacy Policy.</p>
 								<ul class="list-icons">
-									<li><i class="fa fa-map-marker pr-10"></i> 1886 Metro Center Dr. Suite 620,
-Reston, VA 20190</li>
+									<li><i class="fa fa-map-marker pr-10"></i> 1886 Metro Center Dr. Suite 620, Reston, VA 20190</li>
 									<li><i class="fa fa-phone pr-10"></i> 703.757.0419</li>
 									<li><i class="fa fa-fax pr-10"></i> 703.757.0430 </li>
 									<li><i class="fa fa-envelope-o pr-10"></i> info@prestonwealthadvisors.com</li>
@@ -1212,16 +1211,14 @@ Reston, VA 20190</li>
 									<div class="modal-body">
 										<div class="row">
 											<div class="col-md-12">
-												<p class="disc-text">Commitment to Your Private Information:  Preston Wealth Advisors, LLC (“we”) has a policy of protecting the confidentiality and security of information we collect about our clients.  We do not, and will not, share non-public personal information (“Information”) about you with outside third parties without your consent, except for the specific purposes described below.  This notice has been provided to you to describe the Information we may gather and the situations under which we may need to share it.<br><br>Why We Collect and How We Use Information.  We limit the collection and use of Information within our firm to only those individuals associated or employed with us that must have Information to provide financial services to you.  Such services include but are not limited to maintaining your accounts, processing transaction requests, and providing the advisory services described in our Form ADV and our ADV Brochure.<br><br>How We Gather Information.  Most of the Information we gather comes directly from you when you provide us with information on or from any of the following sources:</p>
+												<p class="disc-header">Commitment to Your Private Information:</p><p class="disc-text">Preston Wealth Advisors, LLC (“we”) has a policy of protecting the confidentiality and security of information we collect about our clients.  We do not, and will not, share non-public personal information (“Information”) about you with outside third parties without your consent, except for the specific purposes described below.  This notice has been provided to you to describe the Information we may gather and the situations under which we may need to share it.<p class="disc-header">Why We Collect and How We Use Information:</p><p class="disc-text">We limit the collection and use of Information within our firm to only those individuals associated or employed with us that must have Information to provide financial services to you.  Such services include but are not limited to maintaining your accounts, processing transaction requests, and providing the advisory services described in our Form ADV and our ADV Brochure.<p class="disc-header">How We Gather Information:</p><p class="disc-text">Most of the Information we gather comes directly from you when you provide us with information on or from any of the following sources:</p>
 												<ul class="disc-text">
 													<li>Applications or forms (i.e. name, address, social security number, birth date, assets, income, financial history)</li>
 													<li>Transactional activity in your account (i.e. trading history, account balances)</li>
 													<li>Information services and consumer reporting sources (i.e. to verify your identity or to assess your credit history)</li>
 													<li>Other sources with your consent (i.e. your insurance professional, attorney or accountant)</li>
 												</ul>
-												<p class="disc-text">How We Protect Information.  Our employees and affiliated persons are required to protect the confidentiality of Information and to comply with our stated policies.  They may access Information only when there is an acceptable reason to do so, such as to service your account or provide you with financial services.  Employees who violate our Privacy Policy are subject to disciplinary action, up to and including termination from employment with us.  We also maintain physical, electronic and procedural safeguards to protect Information, which comply with applicable SEC, state, and federal laws.<br><br>
-												Sharing Information with Other Companies Permitted Under Law.  We do not disclose Information obtained in the course of our practice except as required or permitted under law.  Permitted disclosures include, for instance, providing Information to unrelated third parties who need to know such Information in order to assist us with providing services to you.  Unrelated third parties may include broker/dealers, mutual fund companies, insurance companies, and the custodian with which your assets are held.  In such situations, we stress the confidential nature of Information being shared.<br><br>
-												Former Customers.  Even if we cease to provide you with financial products or services, our Privacy Policy will continue to apply and we will continue to treat your Information with strict confidentiality.  If you have any questions about our privacy policies or concerns about the information we collect please contact me at your convenience at 703-757-0419 or tjdoremus@prestonwealthadvisors.com.  Thank you for your continued trust and confidence in us.</p>
+												<p class="disc-header">How We Protect Information:</p><p class="disc-text">Our employees and affiliated persons are required to protect the confidentiality of Information and to comply with our stated policies.  They may access Information only when there is an acceptable reason to do so, such as to service your account or provide you with financial services.  Employees who violate our Privacy Policy are subject to disciplinary action, up to and including termination from employment with us.  We also maintain physical, electronic and procedural safeguards to protect Information, which comply with applicable SEC, state, and federal laws.</p><p class="disc-header">Sharing Information with Other Companies Permitted Under Law:</p><p class="disc-text">We do not disclose Information obtained in the course of our practice except as required or permitted under law.  Permitted disclosures include, for instance, providing Information to unrelated third parties who need to know such Information in order to assist us with providing services to you.  Unrelated third parties may include broker/dealers, mutual fund companies, insurance companies, and the custodian with which your assets are held.  In such situations, we stress the confidential nature of Information being shared.</p><p class="disc-header">Former Customers:</p><p class="disc-text">Even if we cease to provide you with financial products or services, our Privacy Policy will continue to apply and we will continue to treat your Information with strict confidentiality.  If you have any questions about our privacy policies or concerns about the information we collect please contact me at your convenience at 703-757-0419 or tjdoremus@prestonwealthadvisors.com.  Thank you for your continued trust and confidence in us.</p>
 											</div>
 										</div>
 									</div>
