added transitions and fixed email

--- a/index.html
+++ b/index.html
@@ -1179,13 +1179,13 @@
 										<i class="fa fa-pencil form-control-feedback"></i>
 									</div>
 									<input type="text" name="_gotcha" style="display:none" />
-									<input type="hidden" name="_subject" value="New Website Contact!" />
+									<input type="hidden" name="_subject" value="New Website Form Contact!" />
 									<input type="submit" value="Send" class="btn btn-default send">
 								</form>
 
 								<script>
 								    var footerform =  document.getElementById('footerform');
-								    footerform.setAttribute('action', '//formspree.io/' + 'ryanjones83' + '@' + 'gmail' + '.' + 'com');
+								    footerform.setAttribute('action', '//formspree.io/' + 'info' + '@' + 'prestonwealthadvisors' + '.' + 'com');
 								</script>
 
 							</div>
