made more updates

--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
 							<div class="col-md-6">
 								<p>At Preston Wealth Advisors, we provide you with an uncommon approach to growing
 								and securing of your wealth.  Because we believe in making trading decisions based on hard data, not emotion, we utilize an algorithm that monitors the market, identifies
-								growth sectors and pinpoints high performance ETFs and Mutual Funds.<br><br>Our unique approach aids us in our efforts to protect your investment during downturns and seek to maximize returns as the market rises.  As an active money manager, our focus is on reviewing portfolio strategies daily and not adhering to the buy and hold methodology.</p>
+								growth sectors and pinpoints high performance ETFs and Mutual Funds.<br><br>Our unique approach aids us in our efforts to protect your investment during downturns and seeks to maximize returns as the market rises.  As an active money manager, our focus is on reviewing portfolio strategies daily and not adhering to the buy and hold methodology.</p>
 
 							</div>
 						</div>
@@ -247,7 +247,7 @@
 					<div class="col-sm-6">
 						<div class="media">
 							<div class="media-body">
-								<a href="#" data-toggle="modal" data-target="#tpmm-tp"><h4 class="media-heading text-right">PWA TACTICAL PORTFOLIOS</h4></a>
+								<a href="#" data-toggle="modal" data-target="#tpmm-tp"><h4 class="media-heading text-right lead">PWA Tactical Portfolios</h4></a>
 								<p class="text-justify">PWA Tactical Portfolios are relative strength, momentum based strategies that monitor price movement and statistical growth opportunities among a range of investments selected from the portfolio’s investment universe.  Using a mathematical algorithm and an exclusive scoring methodology, a combination of investments are selected based off of the opportunity present in the market and the overall portfolio investment objective.  A wide spectrum of portfolios are offered to cater to varying risk tolerances and investment objectives.</p>
 
 							</div>
@@ -302,7 +302,7 @@
 
 						<div class="media">
 							<div class="media-body">
-								<h4 class="media-heading text-right">LIBERTY</h4>
+								<h4 class="media-heading text-right lead">Liberty</h4>
 								<p class="text-justify">Depending on the Investment Objective of the portfolio, Preston Wealth Advisors may be able to buy and sell in any sector at any time.  In the event neither fixed income nor equity investments offer enough return to justify risk, each of our portfolios have the ability to move a portion or all assets to cash.</p>
 							</div>
 							<div class="media-right">
@@ -311,7 +311,7 @@
 						</div>
 						<div class="media">
 							<div class="media-body">
-								<h4 class="media-heading text-right">DIVISION OF LABOR</h4>
+								<h4 class="media-heading text-right lead">Division of Labor</h4>
 								<p class="text-justify">You want to focus on client service, developing relationships, and increasing your assets under management while someone else tends to the portfolios. Preston Wealth Advisors is the “someone else.” Partner with us, and achieve your goals.</p>
 							</div>
 							<div class="media-right">
@@ -326,7 +326,7 @@
 								<i class="fa fa-folder-open fa-4x"></i>
 							</div>
 							<div class="media-body">
-								<a href="#" data-toggle="modal" data-target="#tpmm-dp"><h4 class="media-heading">PWA DYNAMIC PORTFOLIOS</h4></a>
+								<a href="#" data-toggle="modal" data-target="#tpmm-dp"><h4 class="media-heading lead">PWA Dynamic Portfolios</h4></a>
 								<p class="text-justify">PWA Dynamic Portfolios use a quantitatively based, absolute return strategy with exposure to the U.S. Treasury market.  Aside from the PWA Dynamic Treasury Portfolio, the PWA Dynamic Portfolios utilizes multiple uncorrelated tactical strategies to capture price trends and positions assets to benefit from a rising or declining yield curve.  These blended Portfolios provide access to a hybrid approach blending the relative strength based PWA Tactical portfolios and the absolute return strategy.  The segment of the portfolio dedicated to U.S. Treasury exposure is designed to enhance active premium and dynamic risk protection.  Should you have interest in solely using a U.S. Treasury based portfolio as a standalone investment, PWA is happy to provide the solution by offering the PWA Dynamic Treasury portfolio.</p>
 							</div>
 						</div>
@@ -366,7 +366,7 @@
 								<i class="fa fa-child"></i>
 							</div>
 							<div class="media-body">
-								<h4 class="media-heading">TRADE NOTIFICATION</h4>
+								<h4 class="media-heading lead">Trade Notification</h4>
 								<p class="text-justify">To ensure that you are apprised of the investment decisions we make, each day a trade is made, PWA will notify you of the Portfolios being traded.</p>
 							</div>
 						</div>
@@ -1164,17 +1164,17 @@
 
 								<form role="form" id="footerform" method="POST">
 									<div class="form-group has-feedback">
-										<label class="sr-only" for="name2">Name</label>
+										<label class="sr-only" for="name">Name</label>
 										<input type="text" class="form-control" id="name" placeholder="Name" name="name2" required value="">
 										<i class="fa fa-user form-control-feedback"></i>
 									</div>
 									<div class="form-group has-feedback">
 										<label class="sr-only" for="email2">Email address</label>
-										<input type="_replyto" class="form-control" id="email" placeholder="Enter email" name="email2" required value="">
+										<input type="_replyto" class="form-control" id="email" placeholder="Enter email" name="email" required value="">
 										<i class="fa fa-envelope form-control-feedback"></i>
 									</div>
 									<div class="form-group has-feedback">
-										<label class="sr-only" for="message2">Message</label>
+										<label class="sr-only" for="message">Message</label>
 										<textarea class="form-control" rows="8" id="message" placeholder="Message" name="message2" required value=""></textarea>
 										<i class="fa fa-pencil form-control-feedback"></i>
 									</div>
